2004-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* README, src/rbgnome-canvas-item.c, src/rbgnomecanvas.h: Update Copyright.

2004-02-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/canvas-curve.rb: Replace Gdk::RGB.cmap to Gdk::RGB.colormap.
	* src/rbgnomecanvas.h: Add rbgno_canvas_path_def_get_type.
	* src/rbgnome-canvas-item.c: Add Gnome::CanvasShape, Gnome::CanvasRE, 
	Gnome::CanvasClipgroup.
	
2004-02-14  Vincent Isambart  <isambart@netcourrier.com>

	* extconf.rb: replaced PLATFORM with RUBY_PLATFORM.

2003-12-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-canvas-util.c: Fix a segfault of cpoint_to_ruby(). 
	(Bugs [ 859431 ])

2003-09-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-canvas.c, rbgnome-canvas-item.c: Apply Enum/Flags.

2003-08-30  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
	
	* extconf.rb: remove nasty hack by using Dir.entries.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>
                                                                                
	* extconf.rb: Exit with 1 when the package is not found.
	
2003-08-17  Vincent Isambart <isambart@netcourrier.com>

	* sample/canvas-primitives.rb: Follow Ruby/GTK2 changes.

2003-05-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb position changes.

2003-05-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/canvas-primitives.rb: Follow Ruby/GTK changes(Gtk::Table).

2003-02-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Use ../mkmf-gnome2.rb

2002-12-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/canvas-curve.rb, canvas-primitives.rb: Fix warnings for Ruby-1.6.8/1.8.0pre1.

2002-12-25  Masao Mutoh <mutoh@highway.ne.jp>

	* sample/canvas-primitives.rb: Follow Ruby/GTK2 changes.

2002-11-20  Masao Mutoh <mutoh@highway.ne.jp>

	* extconf.rb: Remove checking either gtk2, libart2 are installed or not.

2002-11-17  KUBO Takehiro  <kubo@jiubao.org>

	* extconf.rb: fix bug when running extconf.rb at the top level.
