@@ -1,3 +1,9 @@
+2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/lib/gnomecanvas2.rb: Support GLib::Log.set_log_domain.
+	Define Gnome::Canvas::LOG_DOMAIN.
+	* src/rbgnome-canvas.c: Update Copyright.
+
 2004-03-06  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* README, src/rbgnome-canvas-item.c, src/rbgnomecanvas.h: Update Copyright.
